# gs-experiments

./: .gitignore  .gitmodules  testbench.sh
as-gcn/AS-GCN/: inits.py  run_pubmed.py  sparse_tensor_utils.py  transfer_Graph.py
bench/: bench_coo2csr.py  bench_csc2coo.py  bench_format.py  bench_insubgraph.py  bench_sddmm.py  bench_spmm.py
decomposition/: testbench.sh
decomposition/asgcn/: sampler.py  test.py
decomposition/deepwalk/: sampler.py  test.py  testbench.sh
decomposition/ladies/: sampler.py  test.py  testbench.sh
dgl_e2e_benchmark/: run.sh  utils.py
dgl_e2e_benchmark/as-gcn/: load_graph.py  run.sh  sampler.py  train_dgl.py  train_matrix.py
dgl_e2e_benchmark/fastgcn/: model.py  sampler.py  test.py  train.py  train_dgl.py  train_matrix.py
dgl_e2e_benchmark/graphsage/: model.py  run.sh  sampler.py  test.py  train_dgl.py  train_matrix.py  train_minibatch.py
dgl_e2e_benchmark/graphsaint/: model.py  run.sh  sampler.py  train_minibatch.py
dgl_e2e_benchmark/ladies/: model.py  run.sh  run_profile.sh  sampler.py  test.py  train.py  (+2 more)
e2e_training/: graphsage_time2acc.eps  ladies_time2acc.eps  plot.ipynb
fastgcn/: test_sampler.ipynb  test_sampler.py
graphsage/: test_sampler.py
ladies/: test_sampler.py
main_exp_sampling/: transfer2npz.py  transfer_from_txt.py
nextdoor-dgl/: KHopSampling  batched_graphsage.py  graphsage_sampler.py  load_graph.py  model.py  test.py  train_full.py
nextdoor-dgl/nextdoor/: CMakeLists.txt
nextdoor-dgl/nextdoor/src/: libNextDoor.hpp
nextdoor-dgl/nextdoor/src/khop/: khop.cu
randomwalk/: test_sampler.py
(+116 files in other folders)
